Final push for Professor Wei

--- a/website/templates/business/base.html
+++ b/website/templates/business/base.html
@@ -31,14 +31,14 @@
             <li class="active">
               <a href="{% url 'business:index' %}">
                 <span class="glyphicon">
-                  Buy
+                  MarketPlace
                 </span>
               </a>
             </li>
             <li class="active">
               <a href="#">
                 <span class="glyphicon">
-                  Sell
+                  Profile
                 </span>
               </a>
             </li>
