--- a/website/templates/business/registrationform.html
+++ b/website/templates/business/registrationform.html
@@ -1,4 +1,4 @@
-<!-- This is meant to be a registration form -->
+<!-- This is the registration form template for when Users would like to sign in  -->
 {% extends 'business/base.html' %}
 <div class = "containter-fluid">
   <div class="row">
